--- a/menu.html
+++ b/menu.html
@@ -59,6 +59,48 @@
 
     </header>
 
+    <br><br><br>
+
+
+    <section class="product">
+
+        <h1 class="product_header">Choose your fika</h1>
+
+        <br><br>
+        <div class="product_1">
+            <img src="/images/dalgona.jpg" alt="dalgona" width="300px" height="220px">
+            <h5>Dalgona   $25</h5>
+            <h6>Korean Coffee</h6>
+
+        </div>
+
+        <br><br>
+
+        <div class="product_2">
+            <img src="/images/Irish Coffee.jpg" alt="dalgona" width="300px" height="220px">
+            <h5>Dalgona   $25</h5>
+            <h6>Korean Coffee</h6>
+
+        </div>
+
+
+        <div class="product_1">
+            <img src="/images/dalgona.jpg" alt="dalgona" width="300px" height="220px">
+            <h5>Dalgona   $25</h5>
+            <h6>Korean Coffee</h6>
+
+        </div>
+
+
+        <div class="product_1">
+            <img src="/images/dalgona.jpg" alt="dalgona" width="300px" height="220px">
+            <h5>Dalgona   $25</h5>
+            <h6>Korean Coffee</h6>
+
+        </div>
+
+    </section>
+
 
     
 
