--- a/menu.html
+++ b/menu.html
@@ -77,25 +77,25 @@
         <br><br>
 
         <div class="product_2">
-            <img src="/images/Irish Coffee.jpg" alt="dalgona" width="300px" height="220px">
-            <h5>Dalgona   $25</h5>
-            <h6>Korean Coffee</h6>
+            <img src="/images/Irish Coffee.jpg" alt="Irish_Coffee" width="300px" height="220px">
+            <h5>Irish Coffee   $25</h5>
+            <h6>Irish Coffee</h6>
 
         </div>
 
 
         <div class="product_1">
-            <img src="/images/dalgona.jpg" alt="dalgona" width="300px" height="220px">
-            <h5>Dalgona   $25</h5>
-            <h6>Korean Coffee</h6>
+            <img src="/images/Caffe_latte_Macchiato.jpg" alt="Caffe_latte_Macchiato" width="300px" height="220px">
+            <h5>Macchiato   $25</h5>
+            <h6>Latte Macchiato</h6>
 
         </div>
 
 
         <div class="product_1">
-            <img src="/images/dalgona.jpg" alt="dalgona" width="300px" height="220px">
-            <h5>Dalgona   $25</h5>
-            <h6>Korean Coffee</h6>
+            <img src="/images/7.jpg" alt="kanelbulle" width="300px" height="220px">
+            <h5>Kanelbulle   $25</h5>
+            <h6>Swedish Fika bread</h6>
 
         </div>
 
