fully responsive. Content in hamburger bar needs to be fixed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
+
+        <h1 class="logo">Zapatoos</h1>
+
         <ul class="nav-links">
-            <li>
-                <h1>Zapatoos</h1>
-            </li>
+
             <li class="nav-links__items"><a href="#">Latest</a></li>
             <li class="nav-links__items"><a href="#">Brands</a></li>
             <li class="nav-links__items"><a href="#">Shoes</a></li>
@@ -53,49 +54,49 @@
     <!-- product /start page begins  -->
     <div class="container">
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Air.jpg" alt="Nike Air">
             <h1 class="product__name">Nike Air</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
         </div>
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Flyknit.jpg" alt="">
             <h1 class="product__name">Nike Flyknit</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
         </div>
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Green.jpg" alt="">
             <h1 class="product__name">Nike Swoosh</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
         </div>
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Air.jpg" alt="Nike Air">
             <h1 class="product__name">Nike Air</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
         </div>
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Flyknit.jpg" alt="">
             <h1 class="product__name">Nike Flyknit</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
         </div>
         <div class="product">
-            <i class='bx bx-shopping-bag'></i>
             <img src="Images/Nike_Green.jpg" alt="">
             <h1 class="product__name">Nike Swoosh</h1>
+            <li><button class="buy">Add to basket</button></li>
             <h2 class="product__price">$500</h2>
             <p class="product__discount">Flat 5% off</p>
             <p class="product__discount-price">$1000</p>
@@ -122,6 +123,14 @@
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-col-2">
+            <ul>
+                <li><a href="#">
+                <li><a href="#"><i class="fa-brands fa-cc-visa"></i></a></li></a></li>
+                <li><a href="#"><i class="fa-brands fa-paypal"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-cc-amex"></i></a></li>
             </ul>
         </div>
     </footer>
