changed tagline and colors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
         <main>
             <section class="welcome">
-                <h1 class="welcome__header">Welcome to the coziest coffee shop!</h1>
+                <h1 class="welcome__header">great beans &#8212;	 great coffee</h1>
                 <button class="welcome__btn"><a href="#coffee-varieties">To The Shop</a> </button>
                 <a href="../html/login.html" id="login-link">
                     <i class="fa-solid fa-house-user welcome__icon"></i>
