--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <title>Cart</title>
 </head>
 <body>
-    <header class="pages flex-main">
+    <header class="header flex-main">
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="/index.html">Back to the Shop</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
@@ -20,7 +20,7 @@
     
     <fieldset class="cart container">
         <legend>Your Products</legend>
-        <h3>Oops!!<br><br>Your Cart is empty ..</h3>
+        <h3>Oops!! Your Cart is Empty ..</h3>
     </fieldset>
 
     <div class="shopping-cart shopping-cart1"></div>
