--- a/other.html
+++ b/other.html
@@ -10,7 +10,7 @@
     <title>Other</title>
 </head>
 <body>
-    <header class="pages flex-main">
+    <header class="header pages flex-main">
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="#">Winter Occasions</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
@@ -30,10 +30,10 @@
             <dt>Winter Occasions</dt>
             <dd>
                 <ul>
-                    <li>An occasion name (Official holidays, special dates, sports, hobbies...)
+                    <li>- An occasion name (Official holidays, special dates, sports, hobbies...)
                         <ol>
-                            <li>Related Info.</li>
-                            <li>Related Products and purchase service.</li>
+                            <li>1. Related Info.</li>
+                            <li>2. Related Products and purchase service.</li>
                         </ol>
                     </li>
                 </ul>
@@ -42,10 +42,10 @@
             <dt>Winter Food</dt>
             <dd>
                 <ul>
-                    <li>A food name.
+                    <li>- A food name.
                         <ol>
-                            <li>Related Info.</li>
-                            <li>Related Products and purchase service.</li>
+                            <li>1. Related Info.</li>
+                            <li>2. Related Products and purchase service.</li>
                         </ol>
                     </li>
                 </ul>
@@ -54,10 +54,10 @@
             <dt>Common winter-diseases</dt>
             <dd>
                 <ul>
-                    <li>A disease name.
+                    <li>- A disease name.
                         <ol>
-                            <li>Related Info.</li>
-                            <li>Related Products and purchase service.</li>
+                            <li>1. Related Info.</li>
+                            <li>2. Related Products and purchase service.</li>
                         </ol>
                     </li>
                 </ul>
