added ecommerce assignment

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo"><h1>SHOPPING</h1></a>
+      <a href="#" class="logo"><h1>STORE</h1></a>
 
       <ul class="nav">
         <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Products</a></li>
-        <li><a href="#">Page</a></li>
-        <li><a href="#">Offer</a></li>
       </ul>
 
       <div class="nav-icon">
@@ -41,5 +39,269 @@
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
+
+    <section class="main-home">
+      <div class="main-text">
+        <h5>Shop now</h5>
+        <h1>
+          Winter wardrobe<br />
+          Edit
+        </h1>
+        <p>Your chilly-day heroes</p>
+
+        <a href="#" class="main-btn"
+          >View Now <i class="bx bxs-right-arrow"></i
+        ></a>
+      </div>
+      <div class="down-arrow">
+        <a href="#trending" class="down"
+          ><i class="bx bx-down-arrow-alt"></i
+        ></a>
+      </div>
+    </section>
+    <section class="product-cart" id="cart">
+      <div class="center-text">
+        <h2>Our collection <span>Store</span></h2>
+      </div>
+      <div class="products">
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/tshirt.jpg" alt="cart-image" />
+          <div class="product-text">
+            <h5>DEAL</h5>
+          </div>
+          <div class="heart-icon">
+            <i class="bx bx-heart"></i>
+          </div>
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>View Collection</h4>
+            <p>$9.99</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="trending-cat">
+      <div class="trending-cat-text">
+        <h2>Our top trending categories</h2>
+      </div>
+      <div class="update-cart">
+        <div class="cart">
+          <img src="/images/shoes.jpg" alt="shoes" />
+          <h5>26 jan 2023</h5>
+          <h4>More brands than any other fashion retailer</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Reiciendis, corrupti. Doloremque culpa similique nihil
+            corrupti, quod ex sapiente, quisquam magni suscipit neque
+            officiis, laborum consectetur.
+          </p>
+
+          <h6>Read More...</h6>
+        </div>
+        <div class="cart">
+          <img src="/images/shoes.jpg" alt="shoes" />
+          <h5>26 jan 2023</h5>
+          <h4>More brands than any other fashion retailer</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Reiciendis, corrupti. Doloremque culpa similique nihil
+            corrupti, quod ex sapiente, quisquam magni suscipit neque
+            officiis, laborum consectetur.
+          </p>
+
+          <h6>Read More...</h6>
+        </div>
+        <div class="cart">
+          <img src="/images/shoes.jpg" alt="shoes" />
+          <h5>26 jan 2023</h5>
+          <h4>More brands than any other fashion retailer</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Reiciendis, corrupti. Doloremque culpa similique nihil
+            corrupti, quod ex sapiente, quisquam magni suscipit neque
+            officiis, laborum consectetur.
+          </p>
+
+          <h6>Read More...</h6>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer-info">
+        <div class="address">
+          <a href="#" class="logo"><h1>SHOPPING</h1></a>
+          <p>
+            Stockholm Street 10 <br />
+            EUROPE SWEDEN
+          </p>
+          <p>+4612345678910</p>
+          <p>info@store.com</p>
+        </div>
+        <div class="about-us">
+          <h3>About <span>Store</span></h3>
+          <p>About us</p>
+          <p>Coockies</p>
+          <p>Privacy policy</p>
+          <p>Career</p>
+          <p>Sustainabilty</p>
+          <p>Payment</p>
+        </div>
+        <div class="trending-now">
+          <h3>Trending now</h3>
+          <p>Gym Wear</p>
+          <p>Spring Jackets</p>
+          <p>Suit Pants</p>
+          <p>Party Dresses</p>
+          <p>Bikinis</p>
+          <p>Backpacks</p>
+        </div>
+        <div class="help">
+          <h3>Help</h3>
+          <p>Help center</p>
+          <p>Terms & conditions</p>
+          <p>Returns</p>
+          <p>Delivery</p>
+          <p>Payment</p>
+        </div>
+        <div class="social-icon">
+          <h3>FOLLOW US</h3>
+          <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-reddit"></i></a>
+          <a href="#"><i class="bx bxl-youtube"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+        </div>
+      </div>
+    </section>
+    <div class="copyright">
+      <p>© STORE AB 2023</p>
+    </div>
   </body>
 </html>
