--- a/sign.html
+++ b/sign.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up - Sign in</title>
     <meta name="description" content="signup - signin">
-    <link rel="stylesheet" href="sign.css">
+    <link rel="stylesheet" href="./css/sign.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
